# ChatGemini_SakiTool

./: .env.example  .gitignore  .last_update_check  .update_info  API_KEY_SETUP.md  AUTO_CACHE_GUIDE.md  CHANGELOG.md  COLOR_SYSTEM_DOCUMENTATION.md  CONTRIBUTING.md  CONVERSATION_LOG_20251102.md  CodeGemini.py  EXECUTION_SUMMARY.txt  FEATURES_IMPLEMENTED.md  GEMINI3_OPTIMIZATION_20251119.md  INSTALL.sh  LICENSE  MAINTENANCE_REPORT.md  MEDIA_FILES_GUIDE.md  PERFORMANCE_IMPROVEMENTS_PHASE1.md  README.md  README_EN.md  README_JA.md  README_JP.md  README_KO.md  actual_translation_keys.json  analyze_module_loading.py  analyze_orphans.py  analyze_startup_speed.py  api_retry_wrapper.py  append_i18n_keys.txt  auto_i18n_convert.py  auto_i18n_convert_remaining.py  auto_i18n_converter.py  auto_translate_i18n.py  batch_convert_remaining.py  batch_i18n_converter.py  batch_i18n_replace.py  batch_i18n_scanner.py  batch_translations.yaml  classify_i18n_strings.py  (+113 more)
rust_rewrite/chat_gemini_rust/: .env.example  .gitignore  Cargo.toml
rust_rewrite/chat_gemini_rust/locales/: en.yml  ja.yml  ko.yml  zh-TW.yml
rust_rewrite/chat_gemini_rust/src/: config.rs  i18n.rs  main.rs
rust_rewrite/chat_gemini_rust/src/chat/: commands.rs  doctor.rs  input_parser.rs  mod.rs  pricing.rs  session.rs
rust_rewrite/chat_gemini_rust/src/client/: auth.rs  cache.rs  files.rs  imagen.rs  mod.rs  models.rs  rest.rs
rust_rewrite/chat_gemini_rust/src/codegemini/: chunker.rs  embeddings.rs  mod.rs  store.rs  walker.rs
rust_rewrite/chat_gemini_rust/src/mcp/: client.rs  mapper.rs  mod.rs  protocol.rs
(+157 files in other folders)
