[package]
name = "chat_gemini_rust"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
config = "0.15.19"
crossterm = "0.29.0"
dirs = "6.0.0"
dotenvy = "0.15.7"
futures-util = "0.3.31"
glob = "0.3.3"
hyper = "1.8.1"
hyper-rustls = "0.27.7"
hyper-util = "0.1.20"
ignore = "0.4.25"
mime_guess = "2.0.5"
reedline = "0.45.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rust-i18n = "3.1.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
termimad = "0.34.1"
tokio = { version = "1.49.0", features = ["full"] }
yup-oauth2 = "12.1.2"
